<resources>
    <string name="app_name">Passkeeper</string>
    <string name="text_passkeeper">Passkeeper</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_description_register">Create new account</string>
    <string name="text_register">Register</string>
    <string name="text_existing_user">Login using existing account…</string>
    <string name="text_login">Login</string>
    <string name="text_new_account">Create an account…</string>
    <string name="text_description_login">Login in to your account</string>
    <string name="text_logout">Logout</string>
    <string name="text_welcome">Welcome to the dashboard!</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_add_password">Add password</string>
    <string name="text_delete">Delete</string>
    <string name="text_account">Account</string>
    <string name="text_edit">Edit</string>
    <string name="text_save">Save</string>
</resources>