<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text_passkeeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/text_passkeeper"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_passkeeper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_description_login" />

    <LinearLayout
        android:id="@+id/linear_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_passkeeper"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_email"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="15dp"
            android:text="@string/text_email" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_email"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_password"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="15dp"
            android:text="@string/text_password" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:text="@string/text_login" />

    <TextView
        android:id="@+id/text_existing_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_new_account" />


    <ProgressBar
        android:id="@+id/progress_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:visibility="invisible" />

</RelativeLayout>