<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text_passkeeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/text_passkeeper"
        android:textColor="@color/deep_grey"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_passkeeper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_description_register"
        android:textSize="20sp"
        android:textColor="@color/deep_grey"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_passkeeper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/text_email"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/text_password"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_register"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:backgroundTint="@color/accent_red"
        android:text="@string/text_register" />

    <TextView
        android:id="@+id/text_existing_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/deep_grey"
        android:text="@string/text_existing_user" />

    <ProgressBar
        android:id="@+id/progress_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:visibility="invisible" />

</RelativeLayout>